workloads/cilium/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium
  namespace: default
spec:
  gatewayClassName: cilium
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: All
  - name: dns-tcp
    protocol: TCP
    port: 53
    allowedRoutes:
      kinds:
      - kind: TCPRoute
      namespaces:
        from: All
  - name: dns-udp
    protocol: UDP
    port: 53
    allowedRoutes:
      kinds:
      - kind: UDPRoute
      namespaces:
        from: All
